Source/JavaScriptCore/bytecode/StructureStubInfo.h
@@ -133,6 +133,7 @@ namespace JSC {
 #if ENABLE(DFG_JIT)
         int8_t baseGPR;
         int8_t valueGPR;
+        int8_t scratchGPR;
         int8_t deltaCallToDone;
         int8_t deltaCallToStructCheck;
         int8_t deltaCallToSlowCase;
@@ -142,7 +143,6 @@ namespace JSC {
             struct {
                 int8_t deltaCheckImmToCall;
                 int8_t deltaCallToLoadOrStore;
-                int8_t scratchGPR;
             } unset;
             struct {
                 WriteBarrierBase<Structure> baseObjectStructure;
